# Examenia

./: .gitignore  LICENSE  README.md
backend/: README.md  database.db  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallangeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
